--- a/Calendar.html
+++ b/Calendar.html
@@ -123,6 +123,15 @@
             <a href="https://www.eventbrite.com/e/wayne-hancock-tickets-1975361612759?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
 
+        <div class="col-md-4 show-3">
+            <img src="images/Chickenman 032126.png" style="width: 100%" alt="Responsive image">
+            <h2>Chickenman & Free Range</h2>
+            <h3>March 21st, 2026</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $10</h3> 
+            <a href="https://www.eventbrite.com/e/chickenman-free-range-tickets-1980866524097?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
+
          <div class="col-md-4 show-3">
             <img src="images/Folkfest SM Ad.jpg" style="width: 100%" alt="Responsive image">
             <h2>Dancing Goats Folkfest</h2>
@@ -131,8 +140,12 @@
             <h3>Free Admission</h3>  
             <a href="https://www.facebook.com/DancingGoatsFolkFest" class="btn custom-btn" role="button">Learn More</a> 
         </div>
+  
+    </div>
 
-         <div class="col-md-4 show-3">
+<div class="row content"> 
+    
+     <div class="col-md-4 show-3">
             <img src="images/Harrington 050126.png" style="width: 100%" alt="Responsive image">
             <h2>Vilai Harrington & The Hamptones</h2>
             <h3>May 1st, 2026</h3>
@@ -140,10 +153,6 @@
             <h3>Tickets $12</h3> 
             <a href="https://www.eventbrite.com/e/vilai-harrington-the-hamptones-tickets-1975362397105?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
-  
-    </div>
-
-<div class="row content"> 
 
           <div class="col-md-4 show-3">
             <img src="images/Thread Resize.jpg" style="width: 100%" alt="Responsive image">
@@ -162,8 +171,30 @@
             <h3>Tickets $20</h3> 
             <a href="https://www.eventbrite.com/e/vaden-landers-tickets-1976784408379?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
-    
+
+    </div>
+
+    <div class="row content"> 
+
         <div class="col-md-4 show-3">
+            <img src="images/Duece 081426.png" style="width: 100%" alt="Responsive image">
+            <h2>Luke Deuce & The Wildcards</h2>
+            <h3>August 14th, 2026</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $15</h3> 
+            <a href="hhttps://www.eventbrite.com/e/luke-deuce-the-wildcards-tickets-1980868509034?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
+
+          <div class="col-md-4 show-3">
+            <img src="images/Wobblers 082226.png" style="width: 100%" alt="Responsive image">
+            <h2>The Wobblers</h2>
+            <h3>August 22nd, 2026</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $15</h3> 
+            <a href="https://www.eventbrite.com/e/the-wobblers-tickets-1980867912249?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
+
+      <div class="col-md-4 show-3">
             <h2>Your Band Could Be Up Next!</h2>
             <p>If you are interested in getting on stage at The Fiddle and Bow Music Hall, you can contact us <a class="link-opacity-100-hover" href="Contact.html">here.</a> If you have questions, you can go to our FAQ page <a class="link-opacity-100-hover" href="FAQ.html">here</a> and learn more. It is our mission at The Fiddle and Bow Music Hall to share our love of music, Southern folk art, and to promote local talent. If you are that local talent or musician, get in touch. We would love to hear from you. Just know, Hank Williams Sr. will be looking over your shoulder. </p>
     </div>
