--- a/Calendar.html
+++ b/Calendar.html
@@ -182,7 +182,7 @@
             <h3>August 14th, 2026</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $15</h3> 
-            <a href="hhttps://www.eventbrite.com/e/luke-deuce-the-wildcards-tickets-1980868509034?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+            <a href="https://www.eventbrite.com/e/luke-deuce-the-wildcards-tickets-1980868509034?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
          </div>
 
           <div class="col-md-4 show-3">
