--- a/Calendar.html
+++ b/Calendar.html
@@ -82,15 +82,6 @@
 
     <div class="row content"> 
 
-          <div class="col-md-4 show-3">
-            <img src="images/Duo 013126.png" style="width: 100%" alt="Responsive image">
-            <h2>Angela Easterling Duo</h2>
-            <h3>January 31st, 2026</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $10</h3> 
-            <a href="https://www.eventbrite.com/e/angela-easterling-duo-tickets-1975360715074?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
-         </div>
-
          <div class="col-md-4 show-3">
             <img src="images/Lewis Resize.png" style="width: 100%" alt="Responsive image">
             <h2>Linda Gail Lewis</h2>
@@ -110,10 +101,6 @@
             <a href="https://www.eventbrite.com/e/robbie-fulks-tickets-1975361338940?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
 
-    </div>
-
-    <div class="row content">  
-
         <div class="col-md-4 show-3">
             <img src="images/Hancock 031226.png" style="width: 100%" alt="Responsive image">
             <h2>Wayne "The Train" Hancock</h2>
@@ -122,6 +109,10 @@
             <h3>Tickets $30</h3> 
             <a href="https://www.eventbrite.com/e/wayne-hancock-tickets-1975361612759?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
+
+    </div>
+
+    <div class="row content">  
 
         <div class="col-md-4 show-3">
             <img src="images/Chickenman 032126.png" style="width: 100%" alt="Responsive image">
@@ -140,12 +131,8 @@
             <h3>Free Admission</h3>  
             <a href="https://www.facebook.com/DancingGoatsFolkFest" class="btn custom-btn" role="button">Learn More</a> 
         </div>
-  
-    </div>
 
-<div class="row content"> 
-    
-     <div class="col-md-4 show-3">
+        <div class="col-md-4 show-3">
             <img src="images/Harrington 050126.png" style="width: 100%" alt="Responsive image">
             <h2>Vilai Harrington & The Hamptones</h2>
             <h3>May 1st, 2026</h3>
@@ -153,7 +140,11 @@
             <h3>Tickets $12</h3> 
             <a href="https://www.eventbrite.com/e/vilai-harrington-the-hamptones-tickets-1975362397105?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
+  
+    </div>
 
+<div class="row content"> 
+    
           <div class="col-md-4 show-3">
             <img src="images/Thread Resize.jpg" style="width: 100%" alt="Responsive image">
             <h2>A Different Thread</h2>
@@ -163,7 +154,16 @@
             <a href="https://www.eventbrite.com/e/a-different-thread-tickets-1975363561588?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
 
-     <div class="col-md-4 show-3">
+        <div class="col-md-4 show-3">
+            <img src="images/.png" style="width: 100%" alt="Responsive image">
+            <h2>Down Home - Upstate Music Showcase - 4 Bands</h2>
+            <h3>June 26th, 2026</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $15</h3> 
+            <a href="https://www.eventbrite.com/e/down-home-upstate-a-music-showcase-from-the-foothills-of-sc-tickets-1982150691075?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
+
+         <div class="col-md-4 show-3">
             <img src="images/Vaden Landers 071826.png" style="width: 100%" alt="Responsive image">
             <h2>Vaden Landers</h2>
             <h3>July 18th, 2026</h3>
