--- a/Calendar.html
+++ b/Calendar.html
@@ -155,7 +155,7 @@
          </div>
 
         <div class="col-md-4 show-3">
-            <img src="images/.png" style="width: 100%" alt="Responsive image">
+            <img src="images/4 Bands.png" style="width: 100%" alt="Responsive image">
             <h2>Down Home - Upstate Music Showcase - 4 Bands</h2>
             <h3>June 26th, 2026</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
