--- a/Calendar.html
+++ b/Calendar.html
@@ -169,7 +169,7 @@
             <h3>June 26th, 2026</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $15</h3>
-            <h3>Ticets $20 w/ Shrimp & Grits</h3>
+            <h3>Tickets $20 w/ Shrimp & Grits</h3>
             <a href="https://www.eventbrite.com/e/down-home-upstate-a-music-showcase-from-the-foothills-of-sc-tickets-1982150691075?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
          </div>
 
