--- a/Calendar.html
+++ b/Calendar.html
@@ -83,7 +83,7 @@
     <div class="row content"> 
 
          <div class="col-md-4 show-3">
-            <img src="images/LGL Mod.png" style="width: 100%" alt="Responsive image">
+            <img src="images/LGL Mod.jpg" style="width: 100%" alt="Responsive image">
             <h2>Linda Gail Lewis</h2>
             <h2>W/ Sparkle City Rockets</h2>
             <h3>January 31st, 2026</h3>
