--- a/Calendar.html
+++ b/Calendar.html
@@ -130,9 +130,22 @@
             <h3>Festival Begins 9AM</h3>
             <h3>Free Admission</h3>  
             <a href="https://www.facebook.com/DancingGoatsFolkFest" class="btn custom-btn" role="button">Learn More</a> 
-        </div>
 
-         <div class="col-md-4 show-3">
+        <div class="col-md-4 show-3">
+            <img src="images/Relive.png" style="width: 100%" alt="Responsive image">
+            <h2>Relive The Magic - A Tribute to The King & More</h2>
+            <h2>Austin Irby & Jason Moseley</h2>
+            <h3>April 25th, 2026</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $20</h3> 
+            <a href="https://www.eventbrite.com/e/austin-irby-donny-moseley-relive-the-magic-tickets-1982633492146?aff=ebdsoporgprofile">Tickets</a> 
+        </div>
+             
+    </div>
+
+<div class="row content"> 
+
+       <div class="col-md-4 show-3">
             <img src="images/Goldpine.png" style="width: 100%" alt="Responsive image">
             <h2>Goldpine</h2>
             <h3>April 23rd, 2026</h3>
@@ -140,10 +153,6 @@
             <h3>Tickets $20</h3> 
             <a href="https://goldpine.thrivecart.com/42326-goldpine-honea-path-sc-fiddle-bow/" class="btn custom-btn" role="button">Tickets</a>  
          </div>
-  
-    </div>
-
-<div class="row content"> 
     
          <div class="col-md-4 show-3">
             <img src="images/Harrington 050126.png" style="width: 100%" alt="Responsive image">
@@ -163,6 +172,10 @@
             <a href="https://www.eventbrite.com/e/a-different-thread-tickets-1975363561588?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
 
+    </div>
+
+    <div class="row content"> 
+
         <div class="col-md-4 show-3">
             <img src="images/4 Bands.png" style="width: 100%" alt="Responsive image">
             <h2>Down Home - Upstate Music Showcase - 4 Bands</h2>
@@ -173,11 +186,7 @@
             <a href="https://www.eventbrite.com/e/down-home-upstate-a-music-showcase-from-the-foothills-of-sc-tickets-1982150691075?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
          </div>
 
-    </div>
-
-    <div class="row content"> 
-
-          <div class="col-md-4 show-3">
+        <div class="col-md-4 show-3">
             <img src="images/Vaden Landers 071826.png" style="width: 100%" alt="Responsive image">
             <h2>Vaden Landers</h2>
             <h3>July 18th, 2026</h3>
@@ -195,7 +204,11 @@
             <a href="https://www.eventbrite.com/e/luke-deuce-the-wildcards-tickets-1980868509034?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
          </div>
 
-          <div class="col-md-4 show-3">
+</div>
+
+    <div class="row content">
+
+        <div class="col-md-4 show-3">
             <img src="images/Wobblers 082226.png" style="width: 100%" alt="Responsive image">
             <h2>The Wobblers</h2>
             <h3>August 22nd, 2026</h3>
@@ -203,10 +216,6 @@
             <h3>Tickets $15</h3> 
             <a href="https://www.eventbrite.com/e/the-wobblers-tickets-1980867912249?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
          </div>
-
-</div>
-
-    <div class="row content">
 
         <div class="col-md-4 show-3">
             <h2>Your Band Could Be Up Next!</h2>
