--- a/Calendar.html
+++ b/Calendar.html
@@ -139,7 +139,7 @@
             <h3>April 25th, 2026</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $20</h3> 
-            <a href="https://www.eventbrite.com/e/austin-irby-donny-moseley-relive-the-magic-tickets-1982633492146?aff=ebdsoporgprofile">Tickets</a> 
+            <a href="https://www.eventbrite.com/e/austin-irby-donny-moseley-relive-the-magic-tickets-1982633492146?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a> 
         </div>
              
     </div>
