--- a/Contact.html
+++ b/Contact.html
@@ -108,17 +108,7 @@
   <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
-           <div class="col-md-4 show-1">
-            <img src="images/LGL Mod.jpg" style="width: 100%" alt="Responsive image">
-            <h2>Linda Gail Lewis</h2>
-            <h2>W/ Sparkle City Rockets</h2>
-            <h3>January 31st, 2026</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $30</h3> 
-            <a href="https://www.eventbrite.com/e/linda-gail-lewis-queen-of-rockabilly-tickets-1976779443529?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
-         </div>
-
-         <div class="col-md-4 show-2">
+        <div class="col-md-4 show-1">
             <img src="images/Fulks 030326.png" style="width: 100%" alt="Responsive image">
             <h2>Robbie Fulks</h2>
             <h3>March 3rd, 2026</h3>
@@ -126,6 +116,15 @@
             <h3>Tickets $20</h3> 
             <a href="https://www.eventbrite.com/e/robbie-fulks-tickets-1975361338940?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
+
+        <div class="col-md-4 show-2">
+            <img src="images/Hancock 031226.png" style="width: 100%" alt="Responsive image">
+            <h2>Wayne "The Train" Hancock</h2>
+            <h3>March 12th, 2026</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $30</h3> 
+            <a href="https://www.eventbrite.com/e/wayne-hancock-tickets-1975361612759?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
     
     <div class="col-sm-4 never-know">
       <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from your friend’s local band to a Nashville A-List artist. We might be hosting local comedians to bring some laughs or other music or art-related events. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events too. The events we host are one way we fulfill our mission of sharing our love of music, southern folk art, and promoting local talent. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information.</p>
